logs/Slang/generated/keywords/5.6.2--keyword_covergroup.sv.log
name: keyword_covergroup
description: The 'covergroup' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv:8:8: error: expected declarator
    bit covergroup;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv:8:9: error: language feature not yet supported
    bit covergroup;
        ^~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv:8:19: error: expected identifier
    bit covergroup;
                  ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv:9:1: error: expected member
endmodule
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_covergroup.sv:9:10: error: expected 'endgroup'
endmodule
         ^
